--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,7 +1,7 @@
 # Das sind die Python-Bibliotheken für die Notebooks
 # Diese sind insbesondere für mybinder.org relevant
 jupyter-server-proxy
-pandas==0.23.4
+pandas
 matplotlib
 neo4j
 py2neo
@@ -12,3 +12,4 @@ tornado==5.1.1
 nltk
 numpy
 sklearn
+inflect
